added application request rest api with swagger
